# project-internet

./: Dockerfile  pyproject.toml
app/: agentic_systeem.py  config_gemni.py  instruction.py  main.py  model.py  test.py  testing_systeem.py  tool.py  zip_code_finder.py
